Excercise - 3 - Network resilience and Fault Injection/Policy-service-virtual-service-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: policy-service-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - acctrainings-vikas-gateway
  http:
    - fault:
        delay:
          fixedDelay: 7s
          percentage:
            value: 100
      match:
        - uri:
            prefix: /policy
      route:
        - destination:
            host: policy-api
            port:
              number: 8080
